Fixed Media Queries to now show horizontal scroll at 880 and 300

--- a/css/index.css
+++ b/css/index.css
@@ -169,12 +169,30 @@ h5 {
 * {
   box-sizing: border-box;
 }
+
+html,
 body {
-  -webkit-transition: font-size 0.5s ease-in-out;
-  -moz-transition: font-size 0.5s ease-in-out;
-  -o-transition: font-size 0.5s ease-in-out;
-  transition: font-size 0.5s ease-in-out;
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 62.5%
 }
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+* {
+  box-sizing: border-box;
+}
+
 .container {
   max-width: 880px;
   width: 100%;
@@ -188,7 +206,6 @@ body {
 
 header {
   display: flex;
-
   align-items: center;
   margin-top: 2.9%;
 }
@@ -202,7 +219,7 @@ header nav {
 header nav a {
   display: inline-block;
   font-size: 1.9rem;
-  color: gray;
+  color: black;
   text-decoration: none;
 }
 
@@ -216,7 +233,9 @@ header nav a:last-child {
 
 header .logo {
   display: inline-block;
+ 
 }
+
 
 .top-main {
   width: 100%;
@@ -324,7 +343,7 @@ footer h3 {
 
 /* Tablet  Width 800px */
 
-@media (max-width: 800px) {
+@media (max-width: 880px) {
   .containter {
     width: 100%;
     padding: 20px;
@@ -352,6 +371,7 @@ footer h3 {
     padding-bottom: 40px;
   }
   .top-img {
+    width:100%;
     display: none;
   }
   .top-main {
@@ -431,10 +451,11 @@ footer h3 {
     border-bottom: 1px solid gray;
   }
   .top-img {
+    width:100%;
     display: none;
   }
   .top-text {
-    font-size: 5rem;
+    font-size: 4.5rem;
   }
   .top-main {
     width: 96.66%;
